--- a/dbconfig.json
+++ b/dbconfig.json
@@ -1,5 +1,5 @@
 {
     "user"          : "root",
     "password"      : "12345",
-    "connectString" : "localhost/XE"
+    "connectString" : "UPM_DM/XE"
 }
